// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorMessage > renders custom copy and retry destination 1`] = `
<div
  class="flex flex-col items-center justify-center min-h-100 p-4"
>
  <div>
    <div>
      <div
        class="flex justify-center mb-4"
      >
        <span
          data-testid="alert-icon"
        />
      </div>
      <div>
        Custom Error
      </div>
      <div>
        A more specific message.
      </div>
    </div>
    <div>
      <a
        href="/custom-retry"
      >
        Try Again
      </a>
      <a
        href="/"
      >
        Go to Homepage
      </a>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage > renders the default error state and navigation actions 1`] = `
<div
  class="flex flex-col items-center justify-center min-h-100 p-4"
>
  <div>
    <div>
      <div
        class="flex justify-center mb-4"
      >
        <span
          data-testid="alert-icon"
        />
      </div>
      <div>
        Failed to Load Report
      </div>
      <div>
        We couldn't load the PageSpeed Insights data. This might be due to a temporary issue or the report might not be available.
      </div>
    </div>
    <div>
      <a
        href="/page-speed"
      >
        Try Again
      </a>
      <a
        href="/"
      >
        Go to Homepage
      </a>
    </div>
  </div>
</div>
`;
